# kubevirt

./: build.sh  tdx-vm.yaml
api/openapi-spec/: swagger.json
automation/: test.sh
cmd/test-helpers/pod-mutator/: main.go
hack/: generate.sh  rpm-deps.sh
pkg/util/: amd64.go
pkg/util/migrations/: BUILD.bazel  migrations.go  validation.go
pkg/virt-api/webhooks/: amd64.go
pkg/virt-config/: configuration.go  virt-config.go
pkg/virt-controller/services/: renderresources.go  renderresources_test.go  template.go  template_test.go
pkg/virt-handler/: controller.go  migration-source.go  migration-source_test.go
pkg/virt-handler/device-manager/: BUILD.bazel  common.go  device_controller.go  device_plugin_base.go  generic_device.go  generic_device_test.go  mediated_device.go  mediated_device_test.go  pci_device.go  pci_device_test.go  qgs_device.go  qgs_device_test.go  socket_device.go  socket_device_test.go  usb_device.go  usb_device_test.go
pkg/virt-launcher/virtwrap/: live-migration-source.go  live-migration-source_test.go  stall-detector.go
pkg/virt-operator/: kubevirt_test.go
pkg/virt-operator/util/: config.go
pkg/virt-operator/webhooks/: kubevirt-update-admitter.go  kubevirt-update-admitter_test.go
staging/src/kubevirt.io/api/migrations/v1alpha1/: BUILD.bazel  types_suite_test.go  types_test.go
tests/: vmi_configuration_test.go  vmi_lifecycle_test.go
tests/decorators/: decorators.go
tests/infrastructure/: prometheus.go
tests/migration/: migration.go  stall_detection.go
tests/testsuite/: kubevirtresource.go
(+26 files in other folders)
