load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "types_suite_test.go",
        "types_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//staging/src/kubevirt.io/api/apitesting/testutil:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/utils/ptr:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "deepcopy_generated.go",
        "doc.go",
        "register.go",
        "types.go",
        "types_swagger_generated.go",
        "zz_generated.defaults.go",
    ],
    importpath = "kubevirt.io/api/migrations/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/api/migrations:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
    ],
)
